Add new Glide dependency version